--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_core: ^3.4.0
   cloud_firestore: ^5.4.0
   firebase_auth: ^5.3.1
+  # Dialog
+  quickalert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
