--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
   assets:
     - assets/images/quiz-logo.png
     - assets/images/gameOver.png
+    - assets/images/thinking.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
